# gestion_projet_backend

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/config/: settings.py
